Fix CKEditor image shrinking on left/right alignment
Changed max-width from 50% to 100% for aligned images to preserve their original dimensions when alignment is applied. This fixes the issue where images would shrink considerably when left-align or right-align was chosen in CKEditor.

--- a/static/css/ckeditor_custom.css
+++ b/static/css/ckeditor_custom.css
@@ -76,13 +76,13 @@
 .ck-content .image-style-side {
     float: left;
     margin-right: 1.5em;
-    max-width: 50%;
+    max-width: 100%;
 }
 
 .ck-content .image-style-align-right {
     float: right;
     margin-left: 1.5em;
-    max-width: 50%;
+    max-width: 100%;
 }
 
 .ck-content .image-style-align-center {
